--- a/committee.html
+++ b/committee.html
@@ -77,7 +77,7 @@ tr:hover {
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#supporters">Sponsors</a></li>
           <li><a href="#contact">Contact</a></li-->
-          <li class="buy-tickets"><a href="#buy-tickets">REGISTER</a></li>
+          <li class="buy-tickets"><a href="Register.html">Register</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
