--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ tr:hover {
     <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">1<sup>st</sup> International Conference On Advances In <br><span>Computing & Future Communication Technologies</span></h1>
       <p class="mb-4 pb-0">16-17 December, 2021<br> Meerut Institute Of Engineering & Technology, Meerut, India</p>
-      <a href="#" class="about-btn scrollto">Paper Submission</a>
+      <a href="https://cmt3.research.microsoft.com/ICACFCT2021" class="about-btn scrollto">Paper Submission</a>
     </div>
   </section><!-- End Intro Section -->
 
