--- a/guidelines.html
+++ b/guidelines.html
@@ -77,7 +77,7 @@
 <tr>
 <td height="40" style="text-align:center;border-collapse:collapse;border:2px solid black;"><b>PAPER SUBMISSION LINK :</b></td>
 </tr><tr>
-<td height="40"  style="text-align:center;border-collapse:collapse;border:2px solid black;"><b><a href="https://cmt3.research.microsoft.com/ICACCE2021/">CLICK HERE</a></b></td>
+<td height="40"  style="text-align:center;border-collapse:collapse;border:2px solid black;"><b><a href="https://cmt3.research.microsoft.com/ICACFCT2021">CLICK HERE</a></b></td>
 </tr>
 </table>
 
@@ -106,7 +106,7 @@
 <li>The conference reserves the right to refrain from reviewing papers that are significantly longer than 6 pages.</li>
 <li>Prospective authors are kindly invited to submit papers electronically to ICACFCT 2021 through Microsoft CMT.</li>
 <li>For submission of paper, at least one of the authors of the paper should be a registered user of Microsoft CMT. Unregistered authors should first create an account on Microsoft CMT.
-To submit your paper visit: Microsoft CMT.</li>
+To submit your paper visit: <a href="https://cmt3.research.microsoft.com/ICACFCT2021">Microsoft CMT</a>.</li>
 <li>The review process for this conference is BLINDED.</li>
 <li>The maximum no. of words allowed in the abstract is 250 words and at least 3 keywords are also required.</li>
 <li>The authors are advised to select only one (i.e. the most suitable) track out of mentioned tracks on the submission page for their submission at the time of submitting the manuscript through Microsoft CMT.</li>
