--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ Authors - Lamine FATY (UCAO, Senegal)<span></span></h4>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="ieee-assets\img\ieeeupsection.jpg" class="img-fluid" alt="">
+              <img src="ieee-assets\img\ieeeupsection.jpeg" class="img-fluid" alt="">
             </div>
           </div>
 
