--- a/committee.html
+++ b/committee.html
@@ -262,7 +262,7 @@ tr:hover {
                
         </colgroup>
             <tr>
-              <td> Prof. K. V. Srivastava </td><td>IIT Kanpur, India</td></tr> 
+              <td> Prof. Asheesh Kumar Singh </td><td>MNNIT Allahabad, India</td></tr> 
  <tr><td>Prof. Sanjay Kumar Singh</td><td> IIT BHU, India</td></tr> 
  <tr><td>Prof. V. S. Tripathi</td><td>MNNIT, Allahabad, India </td></tr>
                
