--- a/organizing.html
+++ b/organizing.html
@@ -99,7 +99,7 @@ tr:hover {
 <tr><td rowspan="3">Keynote Chair</td><td>Ms. Swati Sharma, MIET, Meerut, India</td></tr>
 <tr><td>Ms. Aditi Joshi, MIET, Meerut, India</td></tr>
 <tr><td>Ms. Anuradha Taluja, MIET, Meerut, India</td></tr>
-<tr><td rowspan="2">Sponsorship Chair</td><td>Md. Iqbal, MIET, Meerut, India </td></tr>
+<tr><td>Sponsorship Chair</td><td>Md. Iqbal, MIET, Meerut, India </td></tr>
 <tr><td rowspan="2">Public-Relation Chair</td><td>Mr. Raghuraj Singh, MIET, Meerut, India</td></tr>
 <tr><td>Mr. Praveen Kr. Chakravarti, MIET, Meerut, India</td></tr>
 <tr><td rowspan="3">Invitation/ Hospitality/ Transport Chair</td><td>Dr. Ranjeet Kumar, MIET, Meerut, India</td></tr>
