--- a/Register.html
+++ b/Register.html
@@ -231,7 +231,7 @@ input[type=submit] {
 	<div style="text-align:center;font-size:27px;" class="section-header" id="wippapers">
     <b>Account Details to submit the Registration Fee</b>
 	</div>
-   
+<center>   
    <table class="table table-responsive table-bordered table-striped table-hover center-block" style=" margin-top:50px; border:None;">
      <tbody>        
                      <tr>
@@ -255,7 +255,7 @@ input[type=submit] {
 
                     </tr>
    </tbody>
-   </table>  
+	</table> </center> 
 <br>
 
 <div style="text-align:center;font-size:27px;" class="section-header" id="wippapers">
