--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ tr:hover {
 
   <!-- ======= Intro Section ======= -->
   <section id="intro">
-    <div class="intro-container" data-aos="zoom-in" data-aos-delay="100">
-      <span style="font-size:70px;color:white;" class="mb-4 pb-0">1<sup>st</sup> International Conference On Advances In</span><b> <span style="font-size:50px;color:#f82249;">Computing & Future Communication Technologies<br><a href="https://conferences.ieee.org/conferences_events/conferences/conferencedetails/53978" style="font-color:yellow;font-family:Times New Roman;font-size:40px;">IEEE Conference Record ID: #53978</a></span></b>
+    <div class="intro-container" data-aos="zoom-in" data-aos-delay="100"><b>
+      <span style="font-size:60px;color:white;">1<sup>st</sup> International Conference On Advances In</span> <span style="font-size:50px;color:#f82249;">Computing & Future Communication Technologies<br><a href="https://conferences.ieee.org/conferences_events/conferences/conferencedetails/53978" style="font-color:yellow;font-family:Times New Roman;font-size:40px;">IEEE Conference Record ID: #53978</a></span></b>
       <p class="mb-4 pb-0">16-17 December, 2021<br> Meerut Institute Of Engineering & Technology, Meerut, India</p>
       <a href="https://cmt3.research.microsoft.com/ICACFCT2021" class="about-btn scrollto">Paper Submission</a>
     </div>
