--- a/Register.html
+++ b/Register.html
@@ -231,8 +231,8 @@ input[type=submit] {
 	<div style="text-align:center;font-size:27px;" class="section-header" id="wippapers">
     <b>Account Details to submit the Registration Fee</b>
 	</div>
-<center>   
-   <table class="table table-responsive table-bordered table-striped table-hover center-block" style=" margin-top:50px; border:None;">
+ 
+   <table class="table table-responsive table-bordered table-striped table-hover center-block" style="margin-left:5%; margin-top:50px; border:None;">
      <tbody>        
                      <tr>
                       <th>Account Name</th>
@@ -255,7 +255,7 @@ input[type=submit] {
 
                     </tr>
    </tbody>
-	</table> </center> 
+	</table> 
 <br>
 
 <div style="text-align:center;font-size:27px;" class="section-header" id="wippapers">
