--- a/Register.html
+++ b/Register.html
@@ -232,7 +232,15 @@ input[type=submit] {
     <b>Account Details to submit the Registration Fee</b>
 	</div>
  
-   <table class="table table-responsive table-bordered table-striped table-hover center-block" style="margin-left:5%; margin-top:50px; border:None;">
+   <table class="table table-responsive table-bordered table-striped table-hover center-block" style="margin-top:50px; border:None;">
+	   <colgroup>
+               <col span="1" style="width: 15%;">
+               <col span="1" style="width: 20%;">
+			   <col span="1" style="width: 20%;">
+			   <col span="1" style="width: 15%;">
+               <col span="1" style="width: 15%;">
+		<col span="1" style="width: 15%;">   
+    </colgroup>
      <tbody>        
                      <tr>
                       <th>Account Name</th>
