--- a/Register.html
+++ b/Register.html
@@ -232,7 +232,7 @@ input[type=submit] {
     <b>Account Details to submit the Registration Fee</b>
 	</div>
  
-   <table class="table table-responsive table-bordered table-striped table-hover center-block" style="margin-top:50px; border:None;">
+   <table class="table table-responsive table-bordered table-striped table-hover center-block" style="margin-top:50px; border:None;width:100%;">
 	   <colgroup>
                <col span="1" style="width: 15%;">
                <col span="1" style="width: 20%;">
