--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="1st International Conference On Advances In Computing & Future Communication Technologies ( ICACFCT-2021 ) organized by Meerut Institute of Engineering and Technology">
 	<meta name="keywords" content="miet, ieee, icacfct, ICACFCT-2021, samarth anand, miet conference, international conference, samarpan jain, sarthak aggarwal, ieee xplore, ieee up section, shashwat pathak, mukesh rawat, vimal kumar">
-	
+	<meta name="google-site-verification" content="sneSm3EyZ-1d_0zJrRIB1-65zk9AJ-gkdDhrfBjl914" />	
 	<title>IEEE ICACFCT-2021</title>
 
   <!-- Favicons -->
