--- a/index.html
+++ b/index.html
@@ -382,8 +382,9 @@ var x = setInterval(function() {
       
       
       <tr>
-        <td>Submission Deadline</td>
-        <td>20 Aug 2021</td>
+        <td>Submission Deadline Extended</td>
+        <td><del>20 Aug 2021</del></td>
+	      <td>20 Sept 2021</td>      
       </tr>
       <tr>
         <td>Notification of Acceptance Starts</td>
