--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@ var x = setInterval(function() {
       
       <tr>
         <td>Submission Deadline Extended</td>
-        <td><del>20 Aug 2021</del></td>
-	      <td>20 Sept 2021</td>      
+        <td><del>20 Aug 2021</del>
+	      <br>20 Sept 2021</td>      
       </tr>
       <tr>
         <td>Notification of Acceptance Starts</td>
