--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ var x = setInterval(function() {
       <tr>
         <td>Submission Deadline Extended</td>
         <td><del>20 Aug 2021</del>
-	      <br>20 Sept 2021</td>      
+		<br><font color="red">20 Sept 2021</font></td>      
       </tr>
       <tr>
         <td>Notification of Acceptance Starts</td>
