--- a/index.html
+++ b/index.html
@@ -259,7 +259,16 @@ tr:hover {
 			</div>
 		  </li>
 		  <li><a href="guidelines.html" title="Submission Guidelines">Submission&nbsp Guidelines</a></li>
-		  <li><a href="Author.html" title="Call for Paper">Call&nbsp for&nbsp Paper</a></li>
+		  <li><a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			  Invites
+			</a>
+			<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			  <a class="dropdown-item" href="Author.html" style="color:#707070;" title="Call for Paper">Call&nbsp for&nbsp Paper</a>
+			  <a class="dropdown-item" href="https://drive.google.com/file/d/1HteXiwOlHQoCU8qPB2rIsYfX6TeLACFT/view?usp=sharing" style="color:#707070;" title="Call for Proposal">CFP Special Track/Session</a>
+			
+			</div>
+			  
+		</li>
 		  <li><a href="#contact" title="Contact">Contact</a></li>
 		  <li class="buy-tickets"><a href="Register.html" title="Register Here">Register</a></li>
         </ul>
@@ -284,7 +293,7 @@ tr:hover {
         <div class="row">
           <div class="col-lg-6">
             <h2>About The Event</h2>
-            <p style="text-align: justify;">The First IEEE International Conference on “Advances in Computing and Future Communication Technology (ICACFCT-2021)   will be held at Meerut Institute of Engineering and Technology, Meerut India on 16-17 December 2021. The two-day conference will include invited keynote and oral presentations. ICACFCT-2021will provide a forum for researchers and engineers in both academia and industry to exchange the latest innovations and research advancements in Advances in Computing and Communication Engineering, ICACFCT-2021 also provides the attendees the chances to identify the emerging research topics, as well as the future development directions. Prospective authors are invited to submit full (original) research papers, which are NOT submitted or published or under consideration anywhere in other conferences or journals.Accepted and presented papers which are plagiarism free and registered by at least one author, will be submitted for possible inclusion into IEEE Xplore® digital library.
+            <p style="text-align: justify;">The First IEEE International Conference on “Advances in Computing and Future Communication Technologies (ICACFCT-2021)   will be held at Meerut Institute of Engineering and Technology, Meerut India on 16-17 December 2021. The two-day conference will include invited keynote and oral presentations. ICACFCT-2021will provide a forum for researchers and engineers in both academia and industry to exchange the latest innovations and research advancements in Advances in Computing and Communication Engineering, ICACFCT-2021 also provides the attendees the chances to identify the emerging research topics, as well as the future development directions. Prospective authors are invited to submit full (original) research papers, which are NOT submitted or published or under consideration anywhere in other conferences or journals.Accepted and presented papers which are plagiarism free and registered by at least one author, will be submitted for possible inclusion into IEEE Xplore® digital library.
 			</p>
 
           </div>
@@ -384,7 +393,7 @@ var x = setInterval(function() {
       <tr>
         <td>Submission Deadline Extended</td>
         <td><del>20 Aug 2021</del>
-		<br><font color="red">20 Sept 2021</font></td>      
+		<br><font color="red">10 Sept 2021</font></td>      
       </tr>
       <tr>
         <td>Notification of Acceptance Starts</td>
