--- a/Author.html
+++ b/Author.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>1st IEEE ICACFCT-2021-Author</title>
+  <title>1st IEEE ICACFCT-2021</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
