--- a/Author.html
+++ b/Author.html
@@ -252,13 +252,43 @@ Track 11</td><td> ANTENNA, MICROWAVE AND RF</td>
         </div>
 
         <div class="sec-id" style="margin-top:8%;">
-          <center><h3 style="color:#06a598;"><b>Innovation and Entrepreneurship</b></h3></center>
+          <center><h3 style="color:#06a598;"><b>Track 1: Innovation and Entrepreneurship</b></h3></center>
         </div>
 	<div style="margin-left:8%; margin-right:8%;">
 			
 		<div class="col-sm-12 col-md-12 col-xs-12" style="text-align:justify;">
 		
 		<p>	Frugal Innovations; Social Innovations; Industrial Innovations; Business Model Innovations; Trends and Impact on Society; Start-up Ecosystem etc.</p>
+		</div>
+	</div><br><br>
+	   
+
+        <div class="sec-id" style="margin-top:8%;">
+          <center><h3 style="color:#06a598;"><b>Track 2:IoT, AI/ML and Blockchain for Next Generation 
+Applications</b></h3></center>
+        </div>
+	<div style="margin-left:8%; margin-right:8%;">
+			
+		<div class="col-sm-12 col-md-12 col-xs-12" style="text-align:justify;">
+		
+		<p>The aim of this special session is to invite prospective authors to submit applications in the following broad areas (but not limited to):</p>
+			<ul>
+				<li>Internet of Things (IoT) Applications</li>
+				<li>Smart Grid Technologies, Planning and Management</li>
+				<li>Biomedical Signal Processing</li>
+				<li>Brain Computer Interface</li>
+				<li>Human Machine Communication</li> 
+				<li>Machine to Machine Communication</li>
+				<li>Image and Video Processing</li>
+				<li>Biometric Identification and Recognition</li>
+				<l1>Gesture and Posture Analysis and Recognition</li>
+				<li>Natural Language Processing</li>
+				<li>Robotics, Control and Automation</li>
+				<li>Signal Processing and Communication</li>
+				<li>Blockchain Technologies</li>
+				<li>Surveillance Systems and Forgery Detection</li>
+				<li>Other domain field of studies and applications based IoT, AI/ML and Blockchain.</li>
+			</ul>
 		</div>
 	</div><br><br>
 
