--- a/Author.html
+++ b/Author.html
@@ -260,7 +260,7 @@ Track 11</td><td> ANTENNA, MICROWAVE AND RF</td>
 		
 		<p>	Frugal Innovations; Social Innovations; Industrial Innovations; Business Model Innovations; Trends and Impact on Society; Start-up Ecosystem etc.</p>
 		</div>
-	</div><br><br>
+	</div>
 	   
 
         <div class="sec-id" style="margin-top:8%;">
@@ -281,7 +281,7 @@ Applications</b></h3></center>
 				<li>Machine to Machine Communication</li>
 				<li>Image and Video Processing</li>
 				<li>Biometric Identification and Recognition</li>
-				<l1>Gesture and Posture Analysis and Recognition</li>
+				<li>Gesture and Posture Analysis and Recognition</li>
 				<li>Natural Language Processing</li>
 				<li>Robotics, Control and Automation</li>
 				<li>Signal Processing and Communication</li>
