--- a/Author.html
+++ b/Author.html
@@ -291,6 +291,9 @@ Applications</b></h3></center>
 			</ul>
 		</div>
 	</div><br><br>
+	   
+	   <div style="width:50%;height:200px;Background-color:white; float:left; border-right:solid 1px; border-color:grey;"><div id="t1">Dr.MUKESH RAWAT -:<br>9837477042<br>mukesh.rawat@miet.ac.in</div></div>				
+<div style="width:50%;height:200px;Background-color:white; float:right;border-left:solid 1px;border-color:grey;"><div id="t1">Mr.AJAY KUMAR -:<br>9027391699<br>ajay.kumar@miet.ac.in</div></div>	
 
 	
 
