--- a/Author.html
+++ b/Author.html
@@ -298,12 +298,14 @@ Applications</b></h3></center>
           <div class="col-md-6">
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
-              <h3>Phone Number</h3>
+             
 			  <div style="width:50%;margin:auto;">
-              <h6 style="text-align: justify;font-family:Cambria;"><a href="tel:+919260993294">+919260993294(Dr. Vimal Kumar)</a></h6>
-              <h6 style="text-align: justify;font-family:Cambria;"><a href="tel:+918299474858">+918299474858(Dr. Shashwat Pathak)</a></h6>
-              <h6 style="text-align: justify;font-family:Cambria;"><a href="tel:+919837477042">+919837477042(Dr. Mukesh Rawat)</a></h6>
-			  <h6 style="text-align: justify;font-family:Cambria;"><a href="tel:+917906470865">+917906470865(Dr. Vikrant Varshney)</a></h6>
+				  <h2>Session Chairperson</h2>
+<p>Prof. Vikas Wasson<br> 
+Professor, Department of Computer Science Engineering,Chandigarh University<br>
+E-mail: vikas.cse@cumail.in<br>
+	Mobile: + 91-9463696916</p>
+
 			  </div>
             </div>
           </div>
@@ -311,14 +313,13 @@ Applications</b></h3></center>
           <div class="col-md-6">
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
-              <h3>Email</h3>
-              <h2><pre>Session Organizer<h2> 
-<h3>Dr. Prashant Upadhyaya<h3>
-<h4>IEEE (M), IETE (M) - India, Fellow IETE-Australia</h4>
-<h5>Associate Professor, Department of Electronics Engineering,Chandigarh University</h5>
-<h6>upadhyaya.prashant@gmail.com,
-Mobile: + 91-945116939</pre></h6>
-	      <h6 style="text-align: justify;font-family:Cambria;"><a href="tel:+917906470865">+917906470865(Dr. Vikrant Varshney)</a></h6>
+              
+              <h2>Session Organizer<h2> 
+<p>Dr. Prashant Upadhyaya<br>
+IEEE (M), IETE (M) - India, Fellow IETE-Australia<br>
+Associate Professor, Department of Electronics Engineering,Chandigarh University<br>
+upadhyaya.prashant@gmail.com,
+Mobile: + 91-945116939</pre><br></p>
             </div>
           </div>
 
