--- a/Author.html
+++ b/Author.html
@@ -302,7 +302,7 @@ Applications</b></h3></center>
 			  <div style="width:50%;margin:auto;">
 				  <h2>Session Chairperson</h2>
 <p>Prof. Vikas Wasson<br> 
-Professor, Department of Computer Science Engineering,Chandigarh University<br>
+Professor, Department of Computer Science Engineering<br>Chandigarh University<br>
 E-mail: vikas.cse@cumail.in<br>
 	Mobile: + 91-9463696916</p>
 
@@ -318,8 +318,8 @@ E-mail: vikas.cse@cumail.in<br>
 <p>Dr. Prashant Upadhyaya<br>
 IEEE (M), IETE (M) - India, Fellow IETE-Australia<br>
 Associate Professor, Department of Electronics Engineering,Chandigarh University<br>
-upadhyaya.prashant@gmail.com,
-Mobile: + 91-9451169395</pre><br></p>
+upadhyaya.prashant@gmail.com<br>
+Mobile: + 91-9451169395</p>
             </div>
           </div>
 
