--- a/Author.html
+++ b/Author.html
@@ -302,7 +302,7 @@ Applications</b></h3></center>
 			  <div style="width:50%;margin:auto;">
 				  <h2>Session Chairperson</h2>
 <p>Prof. Vikas Wasson<br> 
-Professor, Department of Computer Science Engineering Chandigarh University<br>
+Professor, Department of Computer Science Engineering <br>Chandigarh University<br>
 E-mail: vikas.cse@cumail.in<br>
 	Mobile: + 91-9463696916</p>
 
