--- a/Author.html
+++ b/Author.html
@@ -313,7 +313,7 @@ E-mail: vikas.cse@cumail.in<br>
           <div class="col-md-6">
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
-              
+              <div style="width:50%;margin:auto;">
               <h2>Session Organizer</h2> 
 <p>Dr. Prashant Upadhyaya<br>
 IEEE (M), IETE (M) - India, Fellow IETE-Australia<br>
