--- a/committee.html
+++ b/committee.html
@@ -460,7 +460,7 @@ tr:hover {
                
         </colgroup>
             <tr>
-              <td>Prof. Amit Kumar Ahuja</td><td> HOD, ECE, MIET, Meerut, India </td></tr>
+              <td>Prof. Amit Kumar Ahuja</td><td> MIET, Meerut, India </td></tr>
 <tr><td>Prof. Neha Mittal</td><td> MIET, Meerut, India </td></tr>
 <tr><td>Dr. Arvind Kr. Kushwaha</td><td> MIET, Meerut, India </td></tr>
 <tr><td>Dr. Subodh Kumar Tripathi</td><td> MIET, Meerut, India </td></tr>
