--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@ var x = setInterval(function() {
       
       
       <tr>
-        <td>Submission Deadline Extended</td>
-        <td><del>20 Aug 2021</del>
-		<br><font color="red">30 Sept 2021</font></td>      
+        <td>Submission Deadline Extended<br>(Hard Deadline)</td>
+        <td><del>20 Aug 2021</del><del>30 Sept 2021</del>
+		<br><font color="red">10 Oct 2021</font></td>      
       </tr>
       <tr>
         <td>Notification of Acceptance Starts</td>
