--- a/index.html
+++ b/index.html
@@ -396,8 +396,12 @@ var x = setInterval(function() {
 		<br><font color="red">10 Oct 2021</font></td>      
       </tr>
       <tr>
-        <td>Notification of Acceptance Starts</td>
-        <td>10 Oct 2021</td>
+	      <td>I<sup>st</sup> Phase Notification of Decision Starts<br>(Submission before 25 Sept 2021)</td>
+        <td>10 Oct 2021 ownwards</td>
+      </tr>
+		<tr>
+	      <td>II<sup>nd</sup> Phase Notification of Decision Starts<br>(Submission after 25 Sept 2021)</td>
+        <td>25 Oct 2021 ownwards</td>
       </tr>
       <tr>
         <td>Last Date of Registration </td>
